# sol

./: .clang-format  .dockerignore  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  COPYING  Dockerfile  README.md  changelog.sh  passwd.py
.github/workflows/: sol.yml
conf/: sol.conf
include/: ref.h
src/: bst.c  bst.h  config.c  config.h  core.c  core.h  ev.c  ev.h  eventloop.c  eventloop.h  handlers.c  handlers.h  hashtable.c  hashtable.h  iterator.c  iterator.h  list.c  list.h  logging.c  logging.h  memory.c  memory.h  memorypool.c  memorypool.h  mqtt.c  mqtt.h  network.c  network.h  objpool.c  objpool.h  pack.c  pack.h  ref.h  ringbuf.c  ringbuf.h  server.c  server.h  sol.c  sol_internal.h  solcore.c  (+11 more)
tests/: sol_test.c  structures_test.c  structures_test.h  unit.h
tests/integration/: base_testcase.py  run.py  sol_test.py  test_connect.py  test_subscribe.py
